Seriously, preload it.

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
     
     <link rel="preload" as="image" href="room.jpg">
-    <link rel="preload" as="image" href="explosion/frame_1.png">
-    <link rel="preload" as="image" href="explosion/frame_2.png">
-    <link rel="preload" as="image" href="explosion/frame_3.png">
-    <link rel="preload" as="image" href="explosion/frame_4.png">
-    <link rel="preload" as="image" href="explosion/frame_5.png">
-    <link rel="preload" as="image" href="explosion/frame_6.png">
-    <link rel="preload" as="image" href="explosion/frame_7.png">
-    <link rel="preload" as="image" href="explosion/frame_8.png">
-    <link rel="preload" as="image" href="explosion/frame_9.png">
-    <link rel="preload" as="image" href="explosion/frame_10.png">
-    <link rel="preload" as="image" href="explosion/frame_11.png">
-    <link rel="preload" as="image" href="explosion/frame_12.png">
-    <link rel="preload" as="image" href="explosion/frame_13.png">
-    <link rel="preload" as="image" href="explosion/frame_14.png">
-    <link rel="preload" as="image" href="explosion/frame_15.png">
-    <link rel="preload" as="image" href="explosion/frame_16.png">
+    <link rel="preload" as="image" href="explosion/frame_1.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_2.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_3.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_4.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_5.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_6.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_7.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_8.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_9.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_10.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_11.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_12.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_13.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_14.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_15.png" fetchpriority="high">
+    <link rel="preload" as="image" href="explosion/frame_16.png" fetchpriority="high">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
